src/grammar/Dino-Grammar
Tokens:

Characters: a-z|A-Z
DIGIT: 0-9
NEGATIVE: -
PERIOD: .
QUESTION_MARK: ?
Operators: times|plus|minus|divided by

Grammar rules:

PROGRAM::= PROGRAM SENTENCE | SENTENCE
SENTENCE::= EXPRESSION . | DEFINITION . | MODIFICATION .| QUESTION ?
EXPRESSION::= EXPRESSION plus TERM | EXPRESSION minus TERM | TERM
TERM::= TERM times FACTOR | TERM divided by FACTOR | FACTOR
DEFINITION::= IDENTIFIER is DATATYPE | IDENTIFIER is EXPRESSION | IDENTIFIER is a/an IDENTIFIER | IDENTIFIER is/are LIST
MODIFICATION::= IDENTIFIER of IDENTIFIER is ENTITY | IDENTIFIER of IDENTIFIER is/are LIST                                                                                    characteristic     object
QUESTION::= is ENTITY a DATATYPE  | What is IDENTIFIER  | What are LIST  | What is the IDENTIFIER of IDENTIFIER
ENTITY::= IDENTIFIER | DATATYPE
DATATYPE::= NUMBER | BOOL
LIST::= ENTITY , LIST | ENTITY
FACTOR::= NUMBER
NUMBER::= Digit+
BOOL::= true | false
IDENTIFIER::= Characters{Characters|Digit}*
